update to test deployment

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -2,6 +2,8 @@
 
 # My Awesome Project
 
+
+Change line for testing automatic deployment
 ---
 
 Welcome to the documentation for **My Awesome Project**! This project aims to revolutionize how we handle data processing.
